--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,29 +13,35 @@
 
 <body id="body">
     <div
-        class="z-0 absolute bg-[url('https://images.pexels.com/photos/164024/pexels-photo-164024.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')] bg-cover bg-center w-full h-screen">
+        class="z-0 absolute bg-[url('https://images.pexels.com/photos/164024/pexels-photo-164024.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')] w-full bg-center bg-no-repeat bg-cover min-h-screen bg-blend-multiply bg-[#00000040]">
     </div>
-    <header class="px-4 py-4 z-10 w-full bg-transparent absolute">
-        <nav class="flex gap-4 justify-start max-container relative mx-auto" aria-label="main">
-            <h1 class="text-white font-title font-semibold sm:text-lg text-sm">Weather Pulse</h1>
-            <img src="img/logo.webp" width="24" height="24" alt="brand-logo" class="bg-center" />
+    <header class=" px-3 py-8 z-10 w-full bg-transparent absolute ">
+        <nav class="flex gap-8 items-center justify-start max-w-[1280px] m-auto relative mx-auto" aria-label="main">
+            <h1 class="text-white font-title font-semibold text-[16px] sm:text-[25px] ">Weather Pulse</h1>
+            <img src="img/logo.webp" alt="brand-logo" class="bg-center h-6 w-6 sm:h-12 sm:w-12" />
         </nav>
     </header>
-    <main class="min-h-screen relative">
-        <section
-            class="flex items-center justify-center h-full bg-transparent z-10 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full max-container ">
-            <form action="location" method="post" id="submit-city-name" class="sm:w-3/5 w-5/6 relative">
-                <button aria-label="clean search text" type="reset" class="absolute top-2.5 right-3 cursor-pointer">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <main class="px-3 min-h-screen relative flex justify-center items-center">
+        <section class="z-10 max-w-[1280px] m-auto w-full flex-col flex gap-6">
+            <h1 class="text-[#C67D2F] font-title text-[26px] sm:text-[48px] font-semibold sm:w-[591px] leading-[110%] ">
+                Stay Ahead with Accurate Weather Updates
+            </h1>
+            <h2 class="text-white opacity-80 font-title font-light w-full text-[14px] sm:w-[690px] sm:text-[16px]">
+                Get real-time weather forecasts, alerts, and updates for your location. Whether you're planning your day
+                or preparing for an adventure, our reliable weather information keeps you informed and ready.
+            </h2>
+            <form action="location" method="post" id="submit-city-name" class="sm:w-[589px] w-full relative">
+                <button aria-label="clean search text" type="reset" class="absolute top-3 right-3 cursor-pointer">
+                    <svg xmlns="http://www.w3.org/2000/svg" class=" text-white " width="24" height="24" viewBox="0 0 24 24">
                         <path fill="currentColor"
                             d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
                     </svg>
                 </button>
                 <input id="city_input" type="text" name="city_name" placeholder="Search" required
-                    class="py-2.5 px-16 w-full rounded-md">
-                <button aria-label="submit search text" class="absolute left-3 top-2.5  cursor-pointer z-10"
+                    class="py-3 px-16 bg-[#284734] text-white w-full rounded-full focus:outline-none ">
+                <button aria-label="submit search text" class="absolute left-5 top-3  cursor-pointer z-10"
                     onclick="sendForm">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class=" text-white "  viewBox="0 0 24 24">
                         <path fill="currentColor"
                             d="M9.5 4a6.5 6.5 0 0 1 6.5 6.5c0 1.62-.59 3.1-1.57 4.23l5.65 5.65l-.71.71l-5.65-5.65A6.469 6.469 0 0 1 9.5 17A6.5 6.5 0 0 1 3 10.5A6.5 6.5 0 0 1 9.5 4m0 1A5.5 5.5 0 0 0 4 10.5A5.5 5.5 0 0 0 9.5 16a5.5 5.5 0 0 0 5.5-5.5A5.5 5.5 0 0 0 9.5 5Z" />
                     </svg>
@@ -43,36 +49,7 @@
             </form>
         </section>
     </main>
-    <footer
-        class="max-container flex flex-col justify-center items-center px-6 absolute bottom-0 left-1/2 transform -translate-x-1/2 ">
-        <section class="max-container max-w-xs flex justify-center items-center">
-            <p class="sm:text-base text-[8px] text-white whitespace-nowrap opacity-75">
-                Empowering Your Day with Precise Weather Insights <%= new Date().getFullYear(); %> Weather Pulse.
-                    All Rights Reserved.
-            </p>
-        </section>
-        <section class="max-container max-w-xs">
-            <nav class="p-2 opacity-75" aria-label="footer">
-                <ul class="flex flex-row gap-2 justify-center items-center px-10">
-                    <li class="sm:text-base text-[9px] text-white whitespace-nowrap hover:opacity-25 cursor-pointer">
-                        Terms of
-                        Use</li>
-                    <div class="border-l-2 rounded-full h-4 border-white opacity-50"></div>
-                    <li class="sm:text-base text-[9px] text-white whitespace-nowrap hover:opacity-25 cursor-pointer">
-                        Privacy
-                        Policy</li>
-                    <div class="border-l-2 rounded-full h-4 border-white opacity-50 "></div>
-                    <li class="sm:text-base text-[9px] text-white whitespace-nowrap hover:opacity-25 cursor-pointer">
-                        Contact Us
-                    </li>
-                    <div class="border-l-2 rounded-full h-4 border-white opacity-50"></div>
-                    <li class="sm:text-base text-[9px] text-white whitespace-nowrap hover:opacity-25 cursor-pointer">
-                        Cookie
-                        Policy</li>
-                </ul>
-            </nav>
-        </section>
-    </footer>
+
 </body>
 
 </html>
