--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -579,10 +579,6 @@ video {
   top: 0px;
 }
 
-.top-1\/2 {
-  top: 50%;
-}
-
 .top-2 {
   top: 0.5rem;
 }
@@ -595,6 +591,18 @@ video {
   top: 1rem;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -605,6 +613,10 @@ video {
 
 .m-5 {
   margin: 1.25rem;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -664,10 +676,6 @@ video {
   height: 9rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
 .h-56 {
   height: 14rem;
 }
@@ -704,8 +712,8 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
+.h-\[24\] {
+  height: 24;
 }
 
 .min-h-screen {
@@ -760,8 +768,12 @@ video {
   width: 2rem;
 }
 
-.w-96 {
-  width: 24rem;
+.w-\[591px\] {
+  width: 591px;
+}
+
+.w-\[790px\] {
+  width: 790px;
 }
 
 .w-\[95\%\] {
@@ -776,17 +788,60 @@ video {
   width: 100vw;
 }
 
+.w-\[589px\] {
+  width: 589px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[690px\] {
+  width: 690px;
+}
+
+.w-\[24\] {
+  width: 24;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[290px\] {
+  width: 290px;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[360px\] {
+  width: 360px;
+}
+
+.w-\[380px\] {
+  width: 380px;
+}
+
+.w-\[340px\] {
+  width: 340px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.max-w-\[1280px\] {
+  max-width: 1280px;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -878,6 +933,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -921,14 +980,8 @@ video {
   border-color: rgb(254 250 224 / var(--tw-border-opacity));
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+.bg-\[\#00000040\] {
+  background-color: #00000040;
 }
 
 .bg-gray-500 {
@@ -950,12 +1003,9 @@ video {
   background-color: transparent;
 }
 
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
-
-.bg-\[url\(\'\/img\/bg\.jpg\'\)\] {
-  background-image: url('/img/bg.jpg');
+.bg-\[\#284734\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 71 52 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'https\:\/\/images\.pexels\.com\/photos\/164024\/pexels-photo-164024\.jpeg\?auto\=compress\&cs\=tinysrgb\&w\=1260\&h\=750\&dpr\=1\'\)\] {
@@ -1051,6 +1101,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1097,12 +1152,24 @@ video {
   font-size: 10px;
 }
 
-.text-\[7px\] {
-  font-size: 7px;
+.text-\[20px\] {
+  font-size: 20px;
 }
 
-.text-\[8px\] {
-  font-size: 8px;
+.text-\[25px\] {
+  font-size: 25px;
+}
+
+.text-\[63px\] {
+  font-size: 63px;
+}
+
+.text-\[6px\] {
+  font-size: 6px;
+}
+
+.text-\[7px\] {
+  font-size: 7px;
 }
 
 .text-\[9\.5px\] {
@@ -1133,8 +1200,32 @@ video {
   line-height: 1rem;
 }
 
+.text-\[48px\] {
+  font-size: 48px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[26px\] {
+  font-size: 26px;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
@@ -1153,8 +1244,17 @@ video {
   font-weight: 100;
 }
 
+.leading-\[110\%\] {
+  line-height: 110%;
+}
+
 .leading-normal {
   line-height: 1.5;
+}
+
+.text-\[\#C67D2F\] {
+  --tw-text-opacity: 1;
+  color: rgb(198 125 47 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1172,12 +1272,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#4f8bc8\] {
+  --tw-text-opacity: 1;
+  color: rgb(79 139 200 / var(--tw-text-opacity));
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
 
 .opacity-75 {
   opacity: 0.75;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+.bg-blend-multiply {
+  background-blend-mode: multiply;
 }
 
 .shadow-lg {
@@ -1366,6 +1479,15 @@ video {
   opacity: 0.7;
 }
 
+.focus\:border-none:focus {
+  border-style: none;
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .active\:shadow-inner-lg:active {
   --tw-shadow: inset gray 0px 0px 20px -12px;
   --tw-shadow-colored: inset 0px 0px 20px -12px var(--tw-shadow-color);
@@ -1487,6 +1609,14 @@ video {
     height: 100%;
   }
 
+  .sm\:h-12 {
+    height: 3rem;
+  }
+
+  .sm\:h-\[48\] {
+    height: 48;
+  }
+
   .sm\:w-10 {
     width: 2.5rem;
   }
@@ -1505,6 +1635,30 @@ video {
 
   .sm\:w-full {
     width: 100%;
+  }
+
+  .sm\:w-\[589\] {
+    width: 589;
+  }
+
+  .sm\:w-\[589px\] {
+    width: 589px;
+  }
+
+  .sm\:w-\[591px\] {
+    width: 591px;
+  }
+
+  .sm\:w-12 {
+    width: 3rem;
+  }
+
+  .sm\:w-\[48\] {
+    width: 48;
+  }
+
+  .sm\:w-\[690px\] {
+    width: 690px;
   }
 
   @keyframes slide-left {
@@ -1552,6 +1706,22 @@ video {
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-\[48px\] {
+    font-size: 48px;
+  }
+
+  .sm\:text-\[25px\] {
+    font-size: 25px;
+  }
+
+  .sm\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .sm\:leading-\[110\%\] {
+    line-height: 110%;
   }
 }
 
