--- a/views/location.ejs
+++ b/views/location.ejs
@@ -22,8 +22,7 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;"
                                         class="text-lg font-normal sm:text-xl">
-                                        <%= data_current.weather[0].description.charAt(0).toUpperCase()%>
-                                            <%= data_current.weather[0].description.slice(1)%>
+                                        <%= data_current.weather[0].description.charAt(0).toUpperCase()%><%=data_current.weather[0].description.slice(1)%>
                                     </p>
                                 </figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000020;"
@@ -69,8 +68,7 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;"
                                         class="text-lg font-normal sm:text-xl">
-                                        <%= data_today.weather[0].description.charAt(0).toUpperCase()%>
-                                            <%= data_today.weather[0].description.slice(1)%>
+                                        <%= data_today.weather[0].description.charAt(0).toUpperCase()%><%= data_today.weather[0].description.slice(1)%>
                                     </p>
                                 </figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000020;"
@@ -116,8 +114,7 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;"
                                         class="text-lg font-normal sm:text-xl">
-                                        <%= data_tonight.weather[0].description.charAt(0).toUpperCase()%>
-                                            <%= data_tonight.weather[0].description.slice(1)%>
+                                        <%= data_tonight.weather[0].description.charAt(0).toUpperCase()%><%= data_tonight.weather[0].description.slice(1)%>
                                     </p>
                                 </figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000020;"
@@ -163,8 +160,7 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;"
                                         class="text-lg font-normal sm:text-xl">
-                                        <%= data_tomorrow.weather[0].description.charAt(0).toUpperCase()%>
-                                            <%= data_tomorrow.weather[0].description.slice(1)%>
+                                        <%= data_tomorrow.weather[0].description.charAt(0).toUpperCase()%><%= data_tomorrow.weather[0].description.slice(1)%>
                                     </p>
                                 </figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000040;"
